--- a/MyDjangoApp/templates/mydjango/index.html
+++ b/MyDjangoApp/templates/mydjango/index.html
@@ -1,6 +1,8 @@
 <html>
 <body>
   Hello, MyDjangoApp!!!! <br>
-  Enjoy!!! CI/CD !!!
+  Enjoy!!! CI/CD !!! <br>
+  Hello Soshi Miyamoto <br>
+  Hello Risa Takeda
 </body>
 </html>
